Fix up users and simplify some stuff
